# NaiveC

./: .gitignore  README.md
Lab_01/: CMakeLists.txt
lab_00/: README.md
lab_01/: README.md  main.cc
lab_02/: CMakeLists.txt  README.md  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  print-visitor.h
lab_03/: CMakeLists.txt  README.md  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.h  sema.cc  sema.h
lab_04/: CMakeLists.txt  README.md  ast.h  codegen.cc  diag-engine.h  diag.inc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  sema.cc  sema.h  type.h
lab_05/: README.md  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  print-visitor.h  scope.cc  sema.cc  sema.h
lab_06/: README.md  ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  print-visitor.h  scope.h  sema.cc  type.cc
lab_07/: README.md  ast.h  codegen.cc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  print-visitor.h  sema.h
lab_07/unit_test/lexer/: CMakeLists.txt
lab_08/: README.md  ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  parser.cc  parser.h  print-visitor.cc  print-visitor.h  scope.cc  scope.h  sema.cc  sema.h  type.h
lab_09/: README.md  ast.h  codegen.cc  codegen.h  diag-engine.cc  diag.inc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  print-visitor.h  sema.cc  sema.h  type.cc  type.h
lab_09/unit_test/codegen/: CMakeLists.txt  codegen-test.cc
lab_09/unit_test/parser/: CMakeLists.txt  parser-test.cc
lab_10/: CMakeLists.txt  README.md  ast.h  codegen.cc  codegen.h  diag.inc  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print-visitor.cc  print-visitor.h  scope.cc  sema.cc  sema.h  type.cc  type.h
lab_10/doc/: bnf.txt
lab_10/test/: expr.txt  test.ll  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
lab_10/unit_test/codegen/: codegen-test.cc
lab_10/unit_test/parser/: parser-test.cc
lab_11/: README.md  ast.h  codegen.cc  codegen.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  scope.h  (+5 more)
(+52 files in other folders)
